# Aggy

./: .gitignore  CMakeLists.txt  README.md  issues.txt
Resources/Images/: flower.pix2d  flower2.pix2d  flower3.pix2d
cmake/: FindSDL2.cmake
maps/: map.txt
src/: Controller.cpp  Game.cpp  Renderer.cpp  Renderer.h  character.cpp  character.h  collision-manager.cpp  collision-manager.h  controller.cpp  controller.h  enemy.h  game.cpp  game.h  gamemap.cpp  gamemap.h  ghost.cpp  ghost.h  level.cpp  level.h  main.cpp  renderable.cpp  renderable.h  renderer.cpp  renderer.h  resource-manager.cpp  resource-manager.h  shotfired.cpp  shotfired.h
